# fastapilaravel

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMAND_SYSTEM_IMPROVEMENTS.md  DOCKER.md  Dockerfile  ENHANCEMENTS.md  FINAL_LARAVEL_ENHANCEMENTS.md  LARAVEL_12_UPGRADE_SUMMARY.md  LARAVEL_ENHANCEMENTS_SUMMARY.md  LARAVEL_FEATURES.md  Makefile  PASSPORT_COMMANDS.md  QUERYBUILDER_ENHANCEMENTS.md  README.md  artisan  artisan.py  debug_blade.py  debug_cannot.py  debug_full_compile.py  debug_regex.py  debug_simple.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  migrate.py  mypy.ini  profile_report.txt  py.typed  pyproject.toml  requirements.txt  simple_test.py  test_artisan.py  test_laravel_features.py  type_errors.txt
.github/workflows/: type-check.yml
app/Attributes/: AccessorMutator.py  __init__.py
app/Auth/: AuthManager.py  Gate.py  __init__.py
app/Broadcasting/: BroadcastManager.py  WebSocketEndpoint.py  __init__.py
app/Cache/: CacheConfig.py  CacheStore.py  CacheUtils.py  ProductionCacheStrategies.py  __init__.py
app/Casts/: EncryptedCast.py  EnumCast.py  HashCast.py  JsonCast.py  __init__.py
app/Commands/: HorizonCommand.py  QueueManagementCommand.py  QueueMonitorCommand.py  QueueWorkerCommand.py  __init__.py
app/Config/: ConfigManager.py  ConfigRepository.py  __init__.py
app/Console/: Artisan.py  Command.py  Kernel.py  MakeControllerCommand.py  __init__.py  schedule.py
app/Contracts/: __init__.py
app/DTOs/: __init__.py
app/Database/: DatabaseManager.py  QueryBuilder.py  SoftDeletingScope.py  __init__.py
app/Encryption/: Encrypter.py  __init__.py
app/Enums/: BaseEnum.py  CommonEnums.py  __init__.py
app/Events/: BatchCompleted.py  BatchFailed.py  BatchFinished.py  Event.py  ModelEvents.py  OAuth2Events.py  UserRegistered.py  __init__.py
app/Exceptions/: __init__.py
app/Filesystem/: FilesystemManager.py  __init__.py
app/Forms/: __init__.py
app/Foundation/: Application.py  ServiceProvider.py  __init__.py
app/Hash/: HashManager.py  __init__.py
app/Helpers/: __init__.py  helpers.py
app/Horizon/: Dashboard.py  Facades.py  HorizonManager.py  Metrics.py  Monitoring.py  Supervisors.py  __init__.py
app/Http/: Kernel.py  MiddlewarePipeline.py  RequestLifecycle.py
app/Jobs/: Batch.py  CallableJob.py  Chain.py  ChainMonitor.py  ChainRegistry.py  ChainVisualizer.py  Events.py  Job.py  JobPersistence.py  JobRegistry.py  MetricsCollector.py  Monitor.py  ProcessPaymentJob.py  RateLimiter.py  RetryManager.py  Security.py  SendEmailJob.py  __init__.py
app/Listeners/: OAuth2EventListeners.py  SendWelcomeEmail.py  __init__.py
app/Localization/: Facades.py  LocaleManager.py  Pluralization.py  TranslationManager.py  Translator.py  __init__.py
app/Log/: LogManager.py  __init__.py
app/Mail/: Mailable.py  WelcomeMail.py  (+1 more)
bootstrap/: __init__.py  application.py
config/: __init__.py  app.py  database.py  enhancements.py  env.py  filesystems.py  hashing.py  localization.py  logging.py  notifications.py  oauth2.py  queue.py  sanctum.py  scout.py  settings.py  socialite.py
docs/: 01-core-architecture.md  02-authentication-authorization.md  03-oauth2-implementation.md  04-queue-system.md  05-storage-file-management.md  06-notifications-events-broadcasting.md  07-pagination-query-builder.md  08-mfa-webauthn-security.md  09-comprehensive-improvements.md  ARTISAN_COMMANDS.md  AUTHORIZATION.md  BLADE_TEMPLATES.md  QueryBuilder.md  README.md  RESOURCE_CONTROLLERS.md  TYPE_CHECKING.md  TYPE_CHECKING_RESULTS.md
examples/: accessor_mutator_usage.py  activity_logging_usage.py  advanced_blade_integration.py  advanced_queue_features.py  authorization_example.py  blade_integration_example.py  cache_usage.py  database_manager_example.py  enum_usage.py  global_scopes_usage.py  horizon_usage.py  improved_features_usage.py  laravel_features_usage.py  localization_usage.py  migration_examples.py  pagination_example.py  queue_usage.py  rbac_features_demo.py  repository_usage.py  resource_controller_example.py  sanctum_user_model.py  scheduling_example.py  socialite_usage.py  soft_deletes_usage.py  storage_example.py  telescope_usage.py
k6-tests/: DOCKER_SETUP.md  Makefile  POSTGRESQL_SETUP.md  QUICK_START.md  README.md  docker-compose.k6.yml  run-all-tests.js  test-docker-setup.py
routes/: __init__.py  activity_log.py  api.py  auth.py  channels.py  discovery.py  examples.py  horizon.py  mfa.py  monitoring.py  notifications.py  oauth2.py  permissions.py  query_examples.py  roles.py  sanctum.py  socialite.py  telescope.py  user.py  web.py
scripts/: add_strict_typing.py  clean_unused_ignores.py  strict_type_check.py  test_oauth2_flows.py  test_rfc_implementations.py  type_check.py  type_check_strict.py  validate_rfc_implementations.py
stubs/: aiohttp.pyi  boto3.pyi  command.stub  controller.stub  elasticsearch.pyi  faker.pyi  fastapi.pyi  httpx.pyi  job.stub  middleware.stub  migration.create.stub  migration.update.stub  model.stub  psutil.pyi  pusher.pyi  pyotp.pyi  pytz.pyi  redis.pyi  request.stub  sqlalchemy_func.pyi  sqlalchemy_sql.pyi  sqlalchemy_stub.py  yaml.pyi
tests/: test_blade_advanced_directives.py  test_blade_advanced_features.py  test_blade_advanced_scenarios.py  test_blade_complete_features.py  test_blade_complete_syntax.py  test_blade_complex_scenarios.py  test_blade_components.py  test_blade_comprehensive.py  test_blade_comprehensive_security.py  test_blade_custom_extensions.py  test_blade_edge_cases.py  test_blade_engine.py  test_blade_filters_and_globals.py  test_blade_inheritance.py  test_blade_inheritance_components.py  test_blade_internationalization.py  test_blade_nested_directives.py  test_blade_nested_directives_simple.py  test_blade_nested_inheritance.py  test_blade_performance_integration.py  test_blade_performance_stress.py  test_blade_real_world_scenarios.py  test_blade_security_validation.py  test_blade_service_integration.py  test_blade_simple_additional.py  test_blade_template_inheritance.py  test_google_idp_oauth_flow.py  test_openid_connect_flow.py
(+727 files in other folders)
