[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-laravel"
version = "1.0.0"
description = "FastAPI application with Laravel-style structure and strict typing"
authors = [{name = "FastAPI Laravel Team", email = "team@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Enhanced strictness rules
strict_equality = true
strict_concatenate = true
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_unimported = true
extra_checks = true
allow_redefinition = false
local_partial_types = true
implicit_reexport = false
warn_incomplete_stub = true
exclude = "^(examples/|models/)"

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "passlib.*",
    "jose.*",
    "uvicorn.*",
    "pytest.*",
    "fastapi.*",
    "starlette.*",
    "pydantic.*",
    "redis.*",
    "celery.*",
    "alembic.*",
    "email_validator.*",
    "bcrypt.*",
    "cryptography.*",
    "webauthn.*",
    "pyotp.*",
    "qrcode.*",
    "PIL.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stubs.*"
follow_imports = "skip"
ignore_errors = true

# Core application modules with strict typing
[[tool.mypy.overrides]]
module = [
    "app.Services.*",
    "app.Models.*", 
    "app.Http.Controllers.*",
    "app.Http.Requests.*",
    "app.Http.Resources.*",
    "app.Http.Schemas.*",
    "app.Utils.*",
    "app.Cache.*",
    "app.Queue.*",
    "app.Jobs.*"
]
strict = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "database.migrations.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.Horizon.*",
    "app.Telescope.*",
    "app.Sanctum.*",
    "app.Socialite.*"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.Http.Middleware.*",
    "app.Testing.*"
]
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["app", "config", "database", "routes"]
force_sort_within_sections = true
combine_as_imports = true
src_paths = ["app", "config", "database", "routes", "tests"]

# Type checking configuration for development
[tool.mypy-strict]
strict = true
warn_return_any = true
extra_checks = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_decorated = true
local_partial_types = true
no_implicit_reexport = true