[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-laravel"
version = "1.0.0"
description = "FastAPI application with Laravel-style structure and strict typing"
authors = [{name = "FastAPI Laravel Team", email = "team@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

[tool.mypy]
# === STRICT MODE CONFIGURATION ===
strict = true
python_version = "3.12"
exclude = "^(examples/|models/|tests/)"

# === WARNING SETTINGS ===
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_incomplete_stub = true

# === TYPE CHECKING STRICTNESS ===
strict_optional = true
strict_equality = true
strict_concatenate = true

# === DISALLOW ANY TYPES ===
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true

# === UNTYPED CODE HANDLING ===
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_subclassing_any = true
check_untyped_defs = true

# === ADVANCED STRICT CHECKS ===
no_implicit_optional = true
no_implicit_reexport = true
implicit_reexport = false
local_partial_types = true
allow_redefinition = false
extra_checks = true

# === ERROR REPORTING ===
show_error_codes = true
show_column_numbers = true
show_absolute_path = true
color_output = true
error_summary = true
show_traceback = true
pretty = true

# === CACHE SETTINGS ===
incremental = true
cache_dir = ".mypy_cache"
sqlite_cache = true

# === IMPORT DISCOVERY ===
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "passlib.*",
    "jose.*",
    "uvicorn.*",
    "pytest.*",
    "fastapi.*",
    "starlette.*",
    "pydantic.*",
    "redis.*",
    "celery.*",
    "alembic.*",
    "email_validator.*",
    "bcrypt.*",
    "cryptography.*",
    "webauthn.*",
    "pyotp.*",
    "qrcode.*",
    "PIL.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stubs.*"
follow_imports = "skip"
ignore_errors = true

# === CORE APPLICATION MODULES ===
# HTTP layer with maximum strictness
[[tool.mypy.overrides]]
module = [
    "app.Http.Controllers.*",
    "app.Http.Requests.*",
    "app.Http.Resources.*",
    "app.Http.Schemas.*"
]
strict = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_untyped_defs = true
warn_return_any = true

# Services with business logic flexibility
[[tool.mypy.overrides]]
module = ["app.Services.*"]
strict = true
disallow_untyped_defs = true
disallow_any_generics = false
warn_return_any = true

# Models with SQLAlchemy compatibility
[[tool.mypy.overrides]]
module = ["app.Models.*"]
strict = true
disallow_untyped_defs = true
disallow_any_generics = false
warn_return_any = false

# Utilities with strict typing
[[tool.mypy.overrides]]
module = ["app.Utils.*"]
strict = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true

# Cache system
[[tool.mypy.overrides]]
module = ["app.Cache.*"]
strict = true
disallow_untyped_defs = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "database.migrations.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.Horizon.*",
    "app.Telescope.*",
    "app.Sanctum.*",
    "app.Socialite.*"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.Http.Middleware.*",
    "app.Testing.*"
]
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["app", "config", "database", "routes"]
force_sort_within_sections = true
combine_as_imports = true
src_paths = ["app", "config", "database", "routes", "tests"]

# Type checking configuration for development
[tool.mypy-strict]
strict = true
warn_return_any = true
extra_checks = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_decorated = true
local_partial_types = true
no_implicit_reexport = true